--- a/examples/vue2/package.json
+++ b/examples/vue2/package.json
@@ -10,7 +10,8 @@
   "dependencies": {
     "@vue/composition-api": "^1.0.0-rc.1",
     "core-js": "^3.6.5",
-    "vue": "^2.6.11"
+    "vue": "^2.6.11",
+    "vue-paystack2": "..."
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
