--- a/examples/vue3/package.json
+++ b/examples/vue3/package.json
@@ -9,7 +9,8 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
-    "vue": "^3.0.0"
+    "vue": "^3.0.0",
+    "vue-paystack2": "..."
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
